@@ -1,6 +1,7 @@
 {{$NEXT}}
     Fix failing tests.
     Fix example code (#13).
+    Fix parsing series data if there are zero or one episodes (#12).
 
 1.123160  2012-11-11 17:59:08 Europe/London
     Use HTTP::Online to test for online access when running tests.
